<resources>
    <string name="Hataroid_activity">Hataroid</string>
    <string name="Settings">Settings</string>
    <string name="Reset">Reset</string>
    <string name="Pause">Pause</string>
    <string name="Unpause">Unpause</string>
    <string name="Disk">Disk</string>
    <string name="FloppyA">Floppy A</string>
    <string name="FloppyB">Floppy B</string>
    <string name="ChangeDisk">Change Disk</string>
    <string name="Help">Help</string>
    <string name="Controls">Controls</string>
    <string name="ColdReset">Cold Reset</string>
    <string name="WarmReset">Warm Reset</string>
    <string name="SaveLoad">Save/Load</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_file_browser">FileBrowser</string>
    <string name="title_activity_inputmap_configure">Configure Input Mapping</string>
    <string name="InsertFloppyA">Insert Floppy A</string>
    <string name="InsertFloppyB">Insert Floppy B</string>
    <string name="EjectFloppyA">Eject Floppy A</string>
    <string name="EjectFloppyB">Eject Floppy B</string>
    <string name="Quit">Quit</string>
    <string name="ToggleMouseJoystick">Toogle Mouse/Joystick</string>
    <string name="input">Input</string>
    <string name="system">System</string>
    <string name="display">Display</string>
    <string name="sound">Sound</string>
    <string name="storage">Storage</string>
    <string name="cputype">CPU Type</string>
    <string name="machinetype">Machine Type</string>
    <string name="cpuclock">CPU clock</string>
    <string name="memory">Memory</string>
    <string name="pref_system_main_category">Main</string>
    <string name="pref_system_rom_category">Rom</string>
    <string name="pref_system_tweaks_category">Tweaks</string>
    <string name="pref_system_devices_category">Devices</string>
    <string name="pref_storage_rom_category">Rom</string>
    <string name="pref_storage_floppydisks_category">Floppy Disks</string>
    <string name="pref_storage_harddisks_category">Hard Disks</string>
    <string name="cartridgeimage">Cartridge image</string>
    <string name="floppydisks_autoinsertb">Auto insert B</string>
    <string name="floppydisks_autoinsertb_summary">Automatically detect and insert second floppy disk</string>
    <string name="floppydisks_fastfloppyaccess">Fast floppy access</string>
    <string name="floppydisks_fastfloppyaccess_summary">Speed up floppy disc access (may cause incompatibilities)</string>
    <string name="floppydisks_writeprotection">Write protection</string>
    <string name="harddisks_acsiimage">ACSI HD image</string>
    <string name="harddisks_acsi_attach">Attach ACSI HD</string>
    <string name="harddisks_acsi_attach_summary">Connect the ACSI HD to the emulated system</string>
    <string name="harddisks_idemasterimage">IDE HD master image</string>
    <string name="harddisks_idemaster_attach">Attach IDE Master</string>
    <string name="harddisks_idemaster_attach_summary">Connect the IDE Master HD to the emulated system</string>
    <string name="harddisks_ideslaveimage">IDE HD slave image</string>
    <string name="harddisks_ideslave_attach">Attach IDE Slave</string>
    <string name="harddisks_ideslave_attach_summary">Connect the IDE Slave HD to the emulated system</string>
    <string name="harddisks_gemdosdrive">GEMDOS drive directory</string>
    <string name="harddisks_gemdosdrive_attach">Attach GEMDOS drive</string>
    <string name="harddisks_gemdosdrive_attach_summary">Connect the GEMDOS drive to the emulated system</string>
    <string name="harddisks_gemdoswriteprotection">GEMDOS drive write protection</string>
    <string name="harddisks_bootfromharddisk">Boot from HD</string>
    <string name="harddisks_bootfromharddisk_summary">Executes the AUTO folder on the hard disk</string>
    <string name="tosimage">TOS image (ST)</string>
    <string name="tosimage_ste">TOS image (STE)</string>
    <string name="tosimage_falcon">TOS image (Falcon)</string>
    <string name="compatiblecpu">Slower but more compatible CPU</string>
    <string name="compatiblecpu_summary">Enables 68k address errors and CPU prefetch buffer</string>
    <string name="blitteremulation">Blitter emulation</string>
    <string name="blitteremulation_summary">Toggles blitter emulation (ST only), always enabled on STE</string>
    <string name="rtcemulation">Real time clock emulation</string>
    <string name="rtcemulation_summary">Requires TOS >= 1.02</string>
    <string name="patchtimerd">Patch Timer-D</string>
    <string name="patchtimerd_summary">Modifies the MFP timer D rate for improved performance</string>
    <string name="patchtosfasterboot">Patch TOS for faster boot</string>
    <string name="patchtosfasterboot_summary">By-passes the boot memory test</string>
    <string name="printeremulation">Printer Emulation</string>
    <string name="printeremulation_summary">Toggles printer emulation</string>
    <string name="rs232emulation">RS232 Emulation</string>
    <string name="rs232emulation_summary">Toggles RS232 emulation</string>
    <string name="midiemulation">MIDI Emulation</string>
    <string name="midiemulation_summary">MIDI messages piped to the default midi device</string>
    <string name="sound_enabled">Sound</string>
    <string name="sound_enabled_summary">Toggles sound emulation. (Faster when off)</string>
    <string name="sound_synchronize_enabled">Sound Synchronize</string>
    <string name="sound_synchronize_enabled_summary">Improve sound latency by adjusting video emulation to match audio output</string>
    <string name="sound_downmix_enabled">Downmix Stereo -> Mono</string>
    <string name="sound_downmix_enabled_summary">Downmix audio output from stereo to mono</string>
    <string name="playbackquality">Playback quality</string>
    <string name="ymvoices_mixing">YM voices mixing</string>
    <string name="pref_display_monitory_category">Atari Monitor</string>
    <string name="pref_display_extendedvdi_category">Atari Extended VDI</string>
    <string name="pref_display_display_category">Android Display</string>
    <string name="display_showborders">Show borders</string>
    <string name="display_showborders_summary">Shows the screen borders</string>
    <string name="display_monitortype">Atari monitor type</string>
    <string name="display_extendedvdi">Use extended VDI screen</string>
    <string name="display_extendedvdi_summary">Emulates an extended graphics card to allow higher resolutions</string>
    <string name="display_extendedvdi_colors">Extended VDI colors</string>
    <string name="display_extendedvdi_resolution">Extended VDI resolution</string>
    <string name="display_frameskip">Frame skip</string>
    <string name="display_indicators">Indicators</string>
    <string name="display_bilinearfilter">Bi-linear filter</string>
    <string name="display_bilinearfilter_summary">Smooth the emulation screen output</string>
    <string name="display_fullscreen">Full Screen</string>
    <string name="display_fullscreen_summary">Stretch emulated screen to the full screen (may not be aspect correct)</string>
    <string name="display_keepscreenawake">Keep Screen Awake</string>
    <string name="display_keepscreenawake_summary">Keeps screen on without user input</string>
    <string name="pref_input_joysticks_category">Joysticks</string>
    <string name="pref_input_mouse_category">Mouse</string>
    <string name="pref_input_keyboard_category">Keyboard</string>
    <string name="input_keyboard_extra_keys">Additional on-screen keys</string>
    <string name="input_keyboard_extra_keys_summary">Show extra quick keys in the UI. NOTE: the keys may not all fit on your device.</string>
    <string name="input_keyboard_obsession_keys">Obsession mode keys</string>
    <string name="input_keyboard_obsession_keys_summary">Swaps the joystick out with keys suited for Obsession</string>
    <string name="pref_input_onscreen_category">On-Screen</string>
    <string name="input_joystick_port">On-screen Joystick Port</string>
    <string name="input_joysticks_autofire">Autofire</string>
    <string name="input_joysticks_autofire_summary">Toggles auto fire</string>
    <string name="input_joysticks_maparrowkeys">Map Arrow Keys</string>
    <string name="input_joysticks_maparrowkeys_summary">On-screen joystick presses map to the Arrow Keys and Space on the Keyboard</string>
    <string name="input_joysticks_size">Size of On Screen Joystick</string>
    <string name="input_joysticks_size_summary">Default size is 1.0</string>
    <string name="input_onscreen_alpha">On Screen Transparency</string>
    <string name="input_onscreen_alpha_summary">Translucency of on screen controls</string>
    <string name="input_onscreen_hide_all">Hide all on screen UI</string>
    <string name="input_onscreen_hide_all_summary">Hides all on screen controls</string>
    <string name="input_onscreen_only_joy">Show joystick only</string>
    <string name="input_onscreen_only_joy_summary">Hides everything except for the on screen joystick</string>
    <string name="mouseemutype">Mouse Button Emulation Type</string>
    <string name="mousespeed">Mouse Emulation Speed</string>
    <string name="AppDescription">Atari ST Emulator</string>
    <string name="title_activity_help">About Hataroid</string>
    <string name="select">Select</string>
    <string name="newfolder">New Folder</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="newStr">New</string>
    <string name="cancel">Cancel</string>
    <string name="unmap">Un-map</string>
    <string name="device">Device</string>
    <string name="ok">OK</string>
    <string name="renameinputmap_info">Enter a name for your input map</string>
    <string name="switchkeyboard">Switch Keyboard</string>
    <string name="device_kitkat_immersive">Immersive Mode</string>
    <string name="pref_storage_savestates_category">Save States</string>
    <string name="device_kitkat_immersive_summary">Enable Immersive Mode (Android 4.4 Kit Kat or newer required)</string>
    <string name="storage_savestate_exitautosave">Auto save on quit</string>
    <string name="storage_savestate_exitautosave_summary">Automatically saves the session on quit and restores on load. This is saved separately from normal save slots</string>
    <string name="storage_savestate_folder">Save State Folder</string>
    <string name="selectquicksaveslot">Select Quick Save Slot</string>
    <string name="quicksaveslot">Quick Save Slot</string>
    <string name="savestate_save_title">SAVING...</string>
    <string name="savestate_load_title">LOADING...</string>
    <string name="savestate_delete_title">DELETING...</string>
    <string name="savestate_quicksaveslot_title">Select QUICK SAVE Slot (FOR INPUT DEVICE MAPPING)...</string>
    <string name="pref_input_device">Input (Method) Devices</string>
    <string name="input_device_inputmethod">Switch Current Input Device</string>
    <string name="input_device_inputmethod_summary">Choose the current input device from the Android System menu</string>
    <string name="input_device_enable_inputmethod">Use Input Method Device</string>
    <string name="input_device_enable_inputmethod_summary">Enables receiving input from the chosen Input Method Device</string>
    <string name="input_device_configuremap">Configure Input Mapping</string>
    <string name="input_device_configuremap_summary">Configure which input keys map to which emulator keys</string>
    <string name="capture_info">Press the device button you want to map to :</string>
    <string name="capture_status"> </string>
    <string name="input_device_dumpmaps">Dump Input Maps to file</string>
    <string name="input_device_dumpmaps_summary">Saves the user input maps to a file for sending to the developer</string>
    <string name="blank"> </string>
</resources>