<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/rim_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:text="@string/renameinputmap_info"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rim_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/rim_blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/blank"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3" >

            <Button
                android:id="@+id/rim_cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/rim_okBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:text="@string/ok" />

            <Button
                android:id="@+id/rim_keyboardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:text="@string/switchkeyboard" />

        </LinearLayout>

</LinearLayout>
